# SkipSearchSpec

./: .gitignore  README.md  benchmark_1_1_main_matrix.txt  benchmark_bfloat16_matrix.txt  benchmark_runs_next.txt  measurements_to_use.txt  out.html  pyproject.toml  things_to_measure.txt
ablation_results/: layer_ablations_Qwen_Qwen2.5-0.5B_20260418_122333.json  layer_ablations_Qwen_Qwen2.5-0.5B_20260418_141840.json  layer_ablations_Qwen_Qwen2.5-14B_20260421_092107.json  layer_ablations_Qwen_Qwen2.5-14B_20260421_132035.json  layer_ablations_Qwen_Qwen2.5-14B_20260427_183126.json  layer_ablations_Qwen_Qwen2.5-32B_20260421_102022.json  layer_ablations_Qwen_Qwen2.5-3B_20260418_130441.json  layer_ablations_Qwen_Qwen2.5-7B_20260421_113305.json  layer_ablations_Qwen_Qwen2.5-7B_20260421_130202.json  layer_ablations_Qwen_Qwen3.5-0.8B_20260420_200547.json  layer_ablations_Qwen_Qwen3.5-4B_20260420_203659.json
debug_outputs/: chat_training_windows.txt
measurements/: measurements.md
minerva_jobs/: drafter_for_verifier_train.slurm  early_exit_train.slurm  eval_ablations.slurm  gap_bridge_train.slurm  minerva_early_exit_train.slurm
scripts/: install_h100_inference.sh  install_server.sh  install_server2.sh  runpod_startup.sh  setup.sh
self-spec-speedup-calculator/: .gitignore  README.md  package.json
skip_search_spec/: main.py
speculation_traces/: self_spec_trace__checkpoint_final_step_002500__draft_2__max_new_150__20260430_124453.json  self_spec_trace__checkpoint_final_step_002500__draft_2__max_new_150__20260430_124542.json  self_spec_trace__checkpoint_final_step_002500__draft_2__max_new_150__20260430_124735.json  self_spec_trace__checkpoint_final_step_002500__draft_2__max_new_150__20260430_133926.json  self_spec_trace__checkpoint_final_step_002500__draft_2__max_new_150__20260430_135344.json  self_spec_trace__checkpoint_final_step_002500__draft_2__max_new_150__20260430_135727.json  (+3 more)
(+293 files in other folders)
