[project]
name = "skip_search_spec"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Olsson",email = "hugo.contact01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.5.3,<6.0.0)",
    "huggingface-hub (>=1.10.1,<2.0.0)",
    "datasets (>=4.8.4,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
skip_search_spec = "skip_search_spec.main:main"