[project]
name = "skip_search_spec"
version = "0.1.0"
description = ""
authors = [
    { name = "Hugo Olsson", email = "hugo.contact01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.10.0,<3.0.0",
    "transformers>=5.5.0,<6.0.0",
    "huggingface-hub>=1.10.0,<2.0.0",
    "datasets>=4.8.0,<5.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "protobuf>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
server = [
    "flash-linear-attention>=0.5.0,<0.6.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

flashhead = [
    "flash-head>=0.1.7,<0.2.0",
]

all = [
    "flash-linear-attention>=0.5.0,<0.6.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "flash-head>=0.1.7,<0.2.0",
]

[dependency-groups]
build = [
    "setuptools<82",
    "wheel>=0.45.0",
    "packaging>=25.0",
    "ninja>=1.11.0",
]

dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
    "ipykernel>=6.29.0,<7.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
skip_search_spec = "skip_search_spec.main:main"
